[gd_scene load_steps=4 format=3 uid="uid://bsg7kmrjikngn"]

[ext_resource type="Script" path="res://Scripts/Menus/online_select_instrument.gd" id="1_6li02"]
[ext_resource type="PackedScene" uid="uid://b35kdqymb8fro" path="res://Scenes/Menus/vinyl_selector.tscn" id="1_rejip"]

[sub_resource type="LabelSettings" id="LabelSettings_on7h6"]
font_size = 69

[node name="OnlineSelectInstrument" type="Node2D"]
script = ExtResource("1_6li02")
metadata/_edit_lock_ = true

[node name="VinylSelector" parent="." instance=ExtResource("1_rejip")]
position = Vector2(960, 1080)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.5
offset_top = 50.0
offset_right = 296.5
offset_bottom = 145.0
grow_horizontal = 2
text = "Select Instrument"
label_settings = SubResource("LabelSettings_on7h6")

[node name="Back" type="Button" parent="UI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_top = -33.0
offset_right = 305.0
offset_bottom = 33.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Back"

[node name="Instrument" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -176.0
offset_right = 46.5
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 52
text = "Top"

[connection signal="selection_changed" from="VinylSelector" to="." method="_on_vinyl_selector_selection_changed"]
[connection signal="pressed" from="UI/Back" to="." method="_on_back_pressed"]
